# task

./: .gitignore  README.md
backend/: Cargo.toml
backend/configuration/: base.yaml
backend/migrations/2023-11-26-142148_create_users_table/: up.sql
backend/scripts/: init_db.sh
backend/src/: configuration.rs  entities.rs  errors.rs  helpers.rs  lib.rs  main.rs  schema.rs
backend/src/api/: contracts.rs  mod.rs
backend/src/api/routes/: get_users.rs  login.rs  mod.rs  register.rs
backend/src/middleware/: mod.rs  requires_authentication.rs
backend/src/models/: claims.rs  mod.rs  user.rs
backend/src/repository/: mod.rs  users.rs
backend/src/service/: auth.rs  mod.rs  users.rs
