[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
config = { version = "0.13", features = ["yaml"] }
uuid = { version = "1", features = ["v4", "serde"]}
validator = { version = "0.16", features = ["derive"] }